Fixes alignment of file tree cells

--- a/web-fs/src/page-layout/PageLayout.module.css
+++ b/web-fs/src/page-layout/PageLayout.module.css
@@ -50,7 +50,7 @@
 }
 
 .leftPaneContent {
-  padding-top: 14px;
+  padding-top: 6px;
   max-width: 272px;
   min-width: 272px;
   z-index: 1;
